--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ android {
         preDexLibraries = preDexEnabled
     }
     defaultConfig {
-        applicationId 'org.akvopedia'
+        applicationId 'org.akvopedia.sop'
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 147
